Improve: Added new routes (#23)
* chore: refactored and added new routers

* chore: updated docs

* fix: fixed lint and tests checking
